# icarus-offline-character-editor

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: blueprints.txt  main.rs  prospects.txt  talents.txt  workshop_items.txt
