[package]
name = "icarus-offline-character-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "serde"]}
#druid-derive = "0.4.0"
lazy_static = "1.4.0"